<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#c0dbec"
        tools:context=".FormFundraising2Activity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="f2f2f2"
                android:orientation="horizontal">
            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/file_icon" />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:text="@string/form_pengajuan_wakaf"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
        </LinearLayout>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:text="@string/tulis_ajakan_singkat" />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="15pt"
                    android:layout_marginTop="30sp"
                    android:layout_marginBottom="30sp"
                    android:padding="5dp"
                    android:background="#ffffff"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:text="@string/upload_foto" />
        </RelativeLayout>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:text="@string/deskripsi" />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:background="#ffffff"
                android:lines="5"
                android:id="@+id/et_deskripsi"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:text="@string/tulis_ajakan_singkat" />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:hint="@string/contohajakan"
                android:textSize="12sp"
                android:background="#ffffff"
                android:id="@+id/et_ajakan"/>
        <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/egreement"
                android:textSize="10sp"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:background="#67a6ed"
                android:text="@string/confirm"
                android:id="@+id/btn_fundraising"
                android:textColor="#fff"
                android:textSize="18sp" />


    </LinearLayout>

</LinearLayout>