<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".RegisterActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="vertical">
        <TextView
                android:id="@+id/signup_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_for_your_account"
                android:textSize="26dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/main_padding"
                android:layout_marginTop="30dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="12dp"
                    android:text="@string/email"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/et_padding"
                    android:background="#f2f2f2"
                    android:id="@+id/et_email"
                    android:inputType="textEmailAddress"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:text="@string/name"
            />
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/et_padding"
                    android:background="#f2f2f2"
                    android:id="@+id/et_name"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:text="@string/password"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/et_padding"
                    android:background="#f2f2f2"
                    android:id="@+id/et_password"
                    android:inputType="textVisiblePassword"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:text="@string/confirm_password"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/et_padding"
                    android:background="#f2f2f2"
                    android:id="@+id/et_confirmpassword"/>

            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/egreement"
                    android:textSize="10sp"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:background="#67a6ed"
                    android:text="Sign UP"
                    android:id="@+id/btn_signup"
                    android:textColor="#fff"
                    android:textSize="18sp"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>