<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/NoBarTheme"
                android:gravity="center_horizontal"
                android:background="@color/colorPrimary"
                tools:context=".LoginActivity"
                >


    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/logo"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/main_padding"
                    android:background="@drawable/background_form"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="LOGIN"
                        android:textAlignment="center"
                        android:textSize="30dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:fontFamily="sans-serif-black"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:hint="@string/prompt_email"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/email_icon"
                            android:inputType="textEmailAddress"
                            android:background="@drawable/et_background_grey"
                            android:padding="@dimen/et_padding"
                    />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/et_background_grey"
                            android:padding="@dimen/et_padding"
                            android:hint="@string/prompt_password"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/pw_icon"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                        android:id="@+id/btn_login_button"
                        android:layout_width="@dimen/width_button"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/main_padding"
                        android:textSize="18dp"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:background="@drawable/botton_background"

                        android:text="@string/action_sign_in"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="Forgot Password ?"
                        android:textSize="16dp"
                        android:layout_gravity="right"/>
                <Button
                        android:id="@+id/btn_login_with_google"
                        android:layout_width="@dimen/width_button"
                        android:layout_gravity="center"
                        android:padding="@dimen/et_padding"
                        android:layout_height="wrap_content"
                        android:background="@color/ColorWhite"
                        android:textSize="16dp"
                        android:drawableStart="@drawable/icn_google"
                        android:text="Login With Google"
                        android:textStyle="bold"/>




            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <android.support.design.widget.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/ColorBlack"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="Belum Punya Akun?"/>
        <Button
                android:id="@+id/btn_formregister"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/ButtonColor"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="REGISTER"
                android:textSize="20dp"
                android:textStyle="bold"/>
    </android.support.design.widget.BottomNavigationView>
</RelativeLayout>